--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 **__pycache__/
 
+config/prod_settings.py
+config/gunicorn.conf.py
+config/justtravel.conf
+
 media/
 
-static
-config/static/bootstrap/
-!config/static
+static/admin
+static/ckeditor
+static/debug_toolbar
+
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
 
 db.sqlite3
