--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,22 @@
 asgiref==3.5.2
-autopep8==1.6.0
+chardet==4.0.0
 Django==3.2.13
-django-debug-toolbar==3.5.0
+django-braces==1.15.0
+django-ckeditor==6.4.2
+django-js-asset==2.0.0
+django-model-utils==4.2.0
+mbstrdecoder==1.1.0
+packaging==21.3
 Pillow==9.2.0
-pycodestyle==2.8.0
+psycopg2==2.9.3
+pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.1
+six==1.16.0
 sqlparse==0.4.2
+swapper==1.3.0
 toml==0.10.2
+typepy==1.3.0
+# django-debug-toolbar==3.5.0
+# autopep8==1.6.0
+# pycodestyle==2.8.0
