--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 **__pycache__/
 
 config/prod_settings.py
+config/local_settings.py
 config/gunicorn.conf.py
 config/justtravel.conf
 
@@ -14,3 +15,10 @@ static/debug_toolbar
 !**/migrations/__init__.py
 
 db.sqlite3
+
+nginx/
+.env.prod
+.env.prod.db
+docker-compose.prod.yml
+Dockerfile.prod
+entrypoint.prod.sh
