--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-model-utils==4.2.0
 mbstrdecoder==1.1.0
 packaging==21.3
 Pillow==9.2.0
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
@@ -17,6 +17,7 @@ sqlparse==0.4.2
 swapper==1.3.0
 toml==0.10.2
 typepy==1.3.0
-# django-debug-toolbar==3.5.0
-# autopep8==1.6.0
-# pycodestyle==2.8.0
+django-debug-toolbar==3.5.0
+autopep8==1.6.0
+pycodestyle==2.8.0
+gunicorn==20.1.0
