--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,9 @@
 DEBUG=1
-SECRET_KEY=django-insecure-34f0d8c(2_2a^cz-%a#_8)ghse5f5iia^0$(t3)afx&7il*&%o
+SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
-SQL_DATABASE=jt_db
-SQL_USER=jt_admin
+SQL_DATABASE=postgresdb
+SQL_USER=postgres
 SQL_PASSWORD=123456
 SQL_HOST=db
 SQL_PORT=5432
