nginx.conf исправлена опечатка в расширении названия сертификата

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
 server{
     listen 443 ssl;
     ssl on;
-    ssl_certificate /etc/ssl/certificate.csr;
+    ssl_certificate /etc/ssl/certificate.crt;
     ssl_certificate_key /etc/ssl/key.pem; 
     server_name justtrav.ru www.justtrav.ru;
 
