--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,30 +1,34 @@
+upstream jt {
+    server web:8000;
+}
+
 server {
     listen 80;
     return 301 https://justtrav.ru$request_uri;
-    access_log  /var/log/nginx/example.log;
+    access_log  /var/log/nginx/justtrav.log;
 }
 
 server{
     listen 443 ssl;
     ssl on;
-    ssl_certificate /etc/ssl/certificate.crt;
-    ssl_certificate_key /etc/ssl/key.pem; 
+    ssl_certificate /etc/ssl/certs/justtrav.crt;
+    ssl_certificate_key /etc/ssl/private/justtrav_key.pem; 
     server_name justtrav.ru www.justtrav.ru;
+    client_max_body_size 100M;
 
     location /static/ {
-        alias /home/app/web/static/;
+        alias /home/app/web/staticfiles/;
     }
 
     location /media/ {
-        alias /home/app/web/media/;
+        alias /home/app/web/mediafiles/;
     }
 
     location / {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://jt;
+        proxy_set_header Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        client_max_body_size 100M;
     }
 
 }
